# Spotiamp

./: .env.example  .gitignore  CMakeLists.txt  README.md  audio_sdl.cpp  conanfile.py  dialogs_mac.mm  dialogs_sdl.cpp  dialogs_win32.cpp  resource.h  shoutcast.h  spotifyamp.cpp  spotifyamp.h  stdafx.h  vis_sdl.cpp  window.cpp  window.h  window_sdl.cpp  window_sdl.h  window_win32.cpp  zipfile.cpp
.github/workflows/: build.yml
Skins/: kran27's Spotiamp.wsz
cmake/: Info.plist.in  StageArtifact.cmake
cmake/toolchains/: mingw-w64.cmake
conan/profiles/: macos-arm64  macos-x64  windows-mingw-x64
playback/librespot_bridge/: Cargo.toml
playback/librespot_bridge/src/: lib.rs
scripts/: gen_credentials.py  make_icns.py
src/: audio_sdl.cpp  dialogs.h  dialogs_mac.mm  dialogs_sdl.cpp  playback_bridge.h  spotifyamp.cpp  spotifyamp.h  spotifyamp.rc  stdafx.h  window.cpp  window.h  window_sdl.cpp  window_sdl.h  window_win32.cpp  windows_resources.rc  zipfile.cpp
src/playback/librespot_bridge/: Cargo.toml
src/playback/librespot_bridge/src/: lib.rs
src/tiny_spotify/: tiny_spotify_mock.cpp
tiny_spotify/: tiny_spotify.h  tiny_spotify_mock.cpp
